--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="game-wrapper">
       <h1>Pong</h1>
       <div id="game"></div>
-      <svg
+      <!--      <svg
         xmlns="http://www.w3.org/2000/svg"
         version="1.1"
         viewBox="0 0 512 256"
@@ -27,7 +27,7 @@
           style="stroke:#fff;stroke-width:4;"
           stroke-dasharray="20, 15"
         />
-      </svg>
+      </svg> -->
     </div>
     <script type="text/javascript" src="build/bundle.js"></script>
   </body>
